[project]
name = "cuda-soa-lab"
version = "0.1.0"
description = "A FastAPI app with Prometheus metrics and GPU support via Numba"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "prometheus_client>=0.19.0",
    "numba>=0.58.0",
    "python-multipart>=0.0.6"
]
